--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html><html lang="en" class=" js content-loading loading"><head>
-
+<!DOCTYPE html>
+<html lang="en" class=" js content-loading loading"><head>
     <meta charset="utf-8">
     <meta name="author" content="stephband">
-    <meta name="description" content="Documentation for dom. A library of DOM functions for HTML and SVG, importable as individual ES modules.">
+    <meta name="description" content="Textbox tests">
     <meta name="viewport" content="width=device-width">
-
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@stephband">
-    <meta property="og:url" content="http://stephen.band/dom/">
-    <meta property="og:title" content="dom">
-    <meta property="og:description" content="A library of DOM functions for HTML and SVG, importable as individual ES modules.">
-    <meta property="og:image" content="https://stephen.band/images/logo.png">
 
     <title>textboxes</title>
 
@@ -132,7 +125,7 @@
             e.target.scrollTop = 0;
             requestAnimationFrame(() => e.target.scrollTop = 0);
             console.log(e.type, e);
-        })
+        });
     </script>
 </body>
 </html>
